* Thu Jun 17 2021 Chris Tessmer <chris.tessmer@onyxpoint.com> - 7.1.0
- Removed support for Puppet 5
- Ensured support for Puppet 7 in requirements and stdlib

* Thu Jun 03 2021 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 7.0.2
- Added tests for ds389 ldap server
- SSSD will not start and the module fail if no domains are
  defined.  The enable_files_domain setting is set to true to ensure
  that sssd will start.

* Wed Jun 02 2021 Trevor Vaughan <tvaughan@onyxpoint.com> - 7.0.1
- Fixed:
  - sssd-sudo.socket service

* Wed May 19 2021 Trevor Vaughan <tvaughan@onyxpoint.com> - 7.0.0
- Fixed:
  - `sssd::provider::ldap::ldap_pwd_policy` is based on the value in
    `ldap_account_expire_policy` to properly account for non-shadow systems
  - `sssd::provider::ldap::ldap_access_order` is set to the modern set
  - A typo in the `sssd::LdapAccountExpirePol` data type was fixed
  - Ported the krb5 ERB template to EPP and fixed a typo
- Removed:
  - `sssd::manage_service` - obsolete
  - `sssd::ldap_access_order_defaults()` - obsolelte
  - Removed EL6-only artifacts
  - Removed the `LOCAL` domain
  - Support for Puppet 5 was dropped
- Changed:
  - Fail if a version of `sssd` is being managed < 1.16.0
  - Now use the `/etc/sssd/conf.d` directory instead of `concat`
  - The `sssd::service` class is now private
  - Moved the `/etc/sssd` directory configuration into `sssd::config`
- Added:
  - `sssd::config::entry` defined type which allows consistent management of
    permissions and dependencies on config files
  - Users can set `sssd::custom_config` to a `String` that will be placed into
    `/etc/sssd/conf.d/zz_puppet_custom.conf`
  - Allow users to optionally purge the `/etc/sssd/conf.d` directory (disabled
    by default)
  - Trigger the `sssd-sudo.socket` service instead of including the service in
    the main configuration per the `sssd` documentation and error messages in
    the logs
  - Support for puppetlabs/stdlib 7 was added
