@@ -6,20 +6,22 @@
   end
 -%>
 HOSTS:
-  ldapserver:
+  ldapserver.beaker:
     roles:
       - ldap
     platform: el-8-x86_64
     box:  generic/oracle8
     hypervisor: <%= hypervisor %>
-  oel8:
+
+  oel8.beaker:
     roles:
       - default
       - client
     platform: el-8-x86_64
     box: generic/oracle8
     hypervisor: <%= hypervisor %>
-  oel7:
+
+  oel7.beaker:
     roles:
       - client
     platform: el-7-x86_64
